# cup

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  main.py  pyproject.toml  schema.sql
my-cup-frontend/: Dockerfile.frontend  package-lock.json  package.json
my-cup-frontend/src/: App.tsx
my-cup-frontend/src/components/: AdminEventManagement.tsx  AdminLogin.tsx  AdminUserManagement.tsx  EventDetail.tsx  ProtectedRoute.tsx  UserEventList.tsx  UserLogin.tsx  UserMatchHistory.tsx  UserProfile.tsx  UserRegister.tsx
